Red Warnning For Uninstall Other Mods

--- a/Installer/Localization/Lang.zh-TW.resx
+++ b/Installer/Localization/Lang.zh-TW.resx
@@ -136,7 +136,7 @@
     <value>正在請求下載 TONX</value>
   </data>
   <data name="DownloadChannel.Gitee.Desc" xml:space="preserve">
-    <value>別選這個，這個是為中共國準備的</value>
+    <value>別選這個，這個是為阿共地區準備的</value>
   </data>
   <data name="DownloadChannel.Github.Desc" xml:space="preserve">
     <value>選這個就OK了</value>
